--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  {% block extra_css %}{% endblock %}
 </head>
 
 <body class="{{ prefs.theme if prefs is defined and prefs else 'light' }}">
   {% block content %}{% endblock %}
+  
+  {% block extra_js %}{% endblock %}
 </body>
 </html>
-
